Fix java 21 (#617)
* Update common files

* fix build for Java 21

* Up to core and platform ready for a 4.2.0 Micronaut release

And sanitize the testsuite-setialization build file

---------

Co-authored-by: micronaut-build <micronaut-build-account@grails.org>
Co-authored-by: Tim Yates <tim.yates@gmail.com>
Co-authored-by: Sergio del Amo <sergio.delamo@softamo.com>